--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section class="hero">
     <div class="hero-content">
       <h2>Welcome to Coffee Bliss</h2>
-      <p>Your cozy corner for the finest brews in town.</p>
+      <p>Your cozy corner for the finest brews in town.{This is a sample website}</p>
       <a href="reservations.html" class="btn">Book a Table</a>
     </div>
   </section>
